# RobustFacts

./: CMakeLists.txt  DataPerturbation.cpp  DataPerturbation.h  EntityPerturbation.cpp  EntityPerturbation.h  GraphManager.cpp  GraphManager.h  QueryInterface.cpp  QueryInterface.h  QueryPerturbation.cpp  QueryPerturbation.h  Readme.md  main.cpp
test/: test.txt
